- Peanut skin model changed
- Soybean textures/shapes updated
- Primitive survival patches reviewed
- FIX THE FUCKING TRADER SPAWNS!!! STOP SPAWNING IN WATER STOP IT STOP IT STOP ITTTTTTTTTTTTTTTTTT
- use the new 'NutritionPropertiesPerLitreInMeal' stuff
- Healing over time implemented for all items
- Soulstorm Brew makes you psychedelic now?
- Items can go into crocks? New labels for everything?


2.0.0-dev.5
REBALANCING:
- Chickens can eat eggshells again; eggshell and peanut skin requirements quadrupled for troughs

BUG FIXES:
- Fermented fish slop barrel textures fixed
- Whole pumpkins no longer usable for meals
- Porridge patch fixed so it cannot conflict with Wildcraft's nuts in porridge patch

MISC: 
- Eggshells can be turned into washed eggshells, which grind into lime at an 8:1 ratio 

2.0.0-dev.4
HANDBOOK THINGS:
- Meal names fixed in handbook 
- Recipe notes added to meals in the handbook
- Meal descriptions added
- Items grouped together for better handbook visibility
- Meal recipes generally adjusted to look better in the handbook
- Recipe ingredient slots now utilize typeName property
- Dried peat bowl text fixed
- Fruit press handbook entry states the minimum amount needed to work
- Salt crystals mention they can only be made with a cauldron

REBALANCING:
- Soy milk fully changed to protein instead of dairy
- Wine can be used in compote
- All fried items in salad and cold pasta moved to a single ingredient slot 
- Cold pasta and yogurt meal perish timer reduced by 24 hours
- Pilaf recipe changed to require rice+broth instead of rice+solid ingredient; rice requirement doubled
- Whole raw eggs removed from meat stew recipe
- Liquid egg added to porridge recipe topping
- All egg liquids can be added to appropriate meals, not just yolk
- Resin harden timer cut in half; from 19 days to 10
- Bread crumbs give half as much nutrition

BUG FIXES:
- Peanut skins fixed so animals can eat them (egg shells fixed in ACA)

MISC: 