@@ -9473,6 +9473,9 @@
 
   "item-fermentedfish-slop": "Fermented fish slop",
   "itemdesc-fermentedfish-slop": "This smelly pile of unidentifiable fish parts should probably be pressed before it gets even worse.",
+  "item-handbooktitle-fermentedfish": "Fermented Fish",
+  "item-handbooktext-fermentedfish": "The fish meat has begun fermenting and reeks with a sharp, fishy odor. Somehow, it looks like there are bits of bone in this... slop pile. Juice it quickly, before the crows come.",
+
 
   "item-breadcrumbfeed" : "Breadcrumb animal feed",
   "itemdesc-breadcrumbfeed": "Feed comprised of various breadcrumbs.",
