@@ -1,0 +1,462 @@
+{
+	"editor": {
+		"allAngles": false,
+		"entityTextureMode": false
+	},
+	"textureWidth": 16,
+	"textureHeight": 16,
+	"textures": {
+		"slop": "item/food/fermentedfish/slop"
+	},
+	"elements": [
+		{
+			"name": "Origin",
+			"from": [ 8.3, 0.0, 9.0 ],
+			"to": [ 8.3, 0.0, 9.0 ],
+			"rotationOrigin": [ 8.3, 0.0, 9.0 ],
+			"faces": {
+			},
+			"children": [
+				{
+					"name": "Cube1",
+					"from": [ -1.25, 0.125, -2.5 ],
+					"to": [ 2.5, 1.375, 2.5 ],
+					"rotationOrigin": [ 0.0, 0.125, 0.0 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 6.0, 8.0, 9.5, 9.0 ] },
+						"east": { "texture": "#slop", "uv": [ 5.5, 7.0, 10.5, 8.0 ] },
+						"south": { "texture": "#slop", "uv": [ 6.5, 8.0, 10.0, 9.0 ] },
+						"west": { "texture": "#slop", "uv": [ 6.0, 6.5, 11.0, 7.5 ] },
+						"up": { "texture": "#slop", "uv": [ 7.0, 6.0, 10.5, 11.0 ] }
+					}
+				},
+				{
+					"name": "Cube3",
+					"from": [ -2.5, 0.125, -3.125 ],
+					"to": [ 0.0, 2.625, 0.625 ],
+					"rotationOrigin": [ 0.0, 0.125, -0.625 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 8.0, 7.0, 10.5, 9.5 ] },
+						"east": { "texture": "#slop", "uv": [ 5.5, 7.5, 9.0, 10.0 ] },
+						"south": { "texture": "#slop", "uv": [ 5.5, 6.0, 8.0, 8.5 ] },
+						"west": { "texture": "#slop", "uv": [ 6.5, 7.5, 10.0, 10.0 ] },
+						"up": { "texture": "#slop", "uv": [ 5.0, 5.5, 7.5, 9.0 ] }
+					}
+				},
+				{
+					"name": "Cube4",
+					"from": [ 0.0, 1.375, -1.25 ],
+					"to": [ 1.25, 3.25, 1.25 ],
+					"rotationOrigin": [ 0.0, 0.125, -1.875 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 7.5, 8.5, 8.5, 10.0 ] },
+						"east": { "texture": "#slop", "uv": [ 6.0, 9.5, 8.0, 11.0 ], "autoUv": false },
+						"south": { "texture": "#slop", "uv": [ 5.5, 7.0, 6.5, 8.5 ] },
+						"west": { "texture": "#slop", "uv": [ 6.5, 6.0, 8.5, 7.5 ], "autoUv": false },
+						"up": { "texture": "#slop", "uv": [ 7.5, 6.5, 8.5, 8.5 ], "autoUv": false }
+					}
+				},
+				{
+					"name": "Cube5",
+					"from": [ -3.75, 0.125, -4.375 ],
+					"to": [ 1.25, 0.75, 1.25 ],
+					"rotationOrigin": [ 0.0, 0.125, -1.875 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 7.0, 9.0, 12.0, 9.5 ] },
+						"south": { "texture": "#slop", "uv": [ 5.5, 9.5, 10.5, 10.0 ] },
+						"west": { "texture": "#slop", "uv": [ 6.0, 7.0, 11.5, 7.5 ] },
+						"up": { "texture": "#slop", "uv": [ 6.0, 5.0, 11.0, 10.5 ] }
+					}
+				},
+				{
+					"name": "Cube11",
+					"from": [ -3.125, 0.75, -1.875 ],
+					"to": [ -2.5, 2.0, 0.0 ],
+					"rotationOrigin": [ -0.625, 0.75, -2.5 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 10.0, 11.5, 10.5, 12.5 ] },
+						"south": { "texture": "#slop", "uv": [ 5.0, 5.5, 5.5, 6.5 ] },
+						"west": { "texture": "#slop", "uv": [ 9.0, 7.5, 10.5, 8.5 ] },
+						"up": { "texture": "#slop", "uv": [ 11.5, 4.5, 12.0, 6.0 ] }
+					}
+				},
+				{
+					"name": "Cube12",
+					"from": [ -1.875, 2.625, -2.5 ],
+					"to": [ -0.625, 3.25, -0.625 ],
+					"rotationOrigin": [ 0.625, 0.75, -3.125 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 8.0, 8.5, 9.0, 9.0 ] },
+						"east": { "texture": "#slop", "uv": [ 6.0, 5.5, 7.5, 6.0 ] },
+						"south": { "texture": "#slop", "uv": [ 8.0, 5.5, 9.0, 6.0 ] },
+						"west": { "texture": "#slop", "uv": [ 6.0, 5.5, 7.5, 6.0 ] },
+						"up": { "texture": "#slop", "uv": [ 7.0, 5.5, 8.0, 7.0 ] }
+					}
+				},
+				{
+					"name": "Cube13",
+					"from": [ -0.625, 0.125, -3.75 ],
+					"to": [ 1.875, 2.0, -1.25 ],
+					"rotationOrigin": [ 1.25, -1.75, -4.375 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 7.0, 8.5, 9.5, 10.0 ] },
+						"east": { "texture": "#slop", "uv": [ 7.0, 5.5, 9.5, 7.0 ] },
+						"south": { "texture": "#slop", "uv": [ 5.0, 5.5, 7.5, 7.0 ] },
+						"up": { "texture": "#slop", "uv": [ 6.5, 6.5, 9.0, 9.0 ] }
+					}
+				},
+				{
+					"name": "Cube15",
+					"from": [ 1.875, 0.125, -3.125 ],
+					"to": [ 3.125, 0.75, -1.875 ],
+					"rotationOrigin": [ 0.625, 0.75, -3.75 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 7.5, 7.5, 8.5, 8.0 ] },
+						"east": { "texture": "#slop", "uv": [ 6.0, 5.5, 7.0, 6.0 ] },
+						"south": { "texture": "#slop", "uv": [ 8.0, 5.0, 9.0, 5.5 ] },
+						"up": { "texture": "#slop", "uv": [ 6.0, 7.0, 7.0, 8.0 ] }
+					}
+				},
+				{
+					"name": "Cube16",
+					"from": [ -3.125, 0.125, 0.625 ],
+					"to": [ -1.875, 1.375, 1.875 ],
+					"rotationOrigin": [ 0.625, 0.75, -5.0 ],
+					"faces": {
+						"east": { "texture": "#slop", "uv": [ 5.5, 8.0, 6.5, 9.0 ] },
+						"south": { "texture": "#slop", "uv": [ 6.0, 7.5, 7.0, 8.5 ] },
+						"west": { "texture": "#slop", "uv": [ 7.5, 5.5, 8.5, 6.5 ] },
+						"up": { "texture": "#slop", "uv": [ 8.5, 8.0, 9.5, 9.0 ] }
+					}
+				},
+				{
+					"name": "Cube17",
+					"from": [ -2.5, 0.125, 1.25 ],
+					"to": [ 0.0, 0.75, 3.125 ],
+					"rotationOrigin": [ 1.25, 0.75, -5.625 ],
+					"faces": {
+						"east": { "texture": "#slop", "uv": [ 6.0, 7.0, 7.5, 7.5 ] },
+						"south": { "texture": "#slop", "uv": [ 6.5, 9.5, 9.0, 10.0 ] },
+						"west": { "texture": "#slop", "uv": [ 6.5, 6.0, 8.0, 6.5 ] },
+						"up": { "texture": "#slop", "uv": [ 7.5, 7.5, 10.0, 9.0 ] }
+					}
+				},
+				{
+					"name": "Cube18",
+					"from": [ 0.625, 0.125, 2.5 ],
+					"to": [ 1.875, 0.75, 3.75 ],
+					"rotationOrigin": [ 4.375, 0.75, -4.375 ],
+					"faces": {
+						"east": { "texture": "#slop", "uv": [ 7.0, 6.0, 8.0, 6.5 ] },
+						"south": { "texture": "#slop", "uv": [ 6.0, 7.0, 7.0, 7.5 ] },
+						"west": { "texture": "#slop", "uv": [ 7.0, 7.0, 8.0, 7.5 ] },
+						"up": { "texture": "#slop", "uv": [ 6.0, 8.5, 7.0, 9.5 ] }
+					}
+				},
+				{
+					"name": "Cube19",
+					"from": [ -0.625, 1.375, -0.625 ],
+					"to": [ 1.875, 2.0, 1.875 ],
+					"rotationOrigin": [ 3.125, 2.0, -7.5 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 6.5, 8.5, 9.0, 9.0 ] },
+						"east": { "texture": "#slop", "uv": [ 7.0, 5.5, 9.5, 6.0 ] },
+						"south": { "texture": "#slop", "uv": [ 5.5, 7.0, 8.0, 7.5 ] },
+						"west": { "texture": "#slop", "uv": [ 8.5, 6.5, 11.0, 7.0 ] },
+						"up": { "texture": "#slop", "uv": [ 7.5, 9.0, 10.0, 11.5 ] }
+					}
+				},
+				{
+					"name": "Cube20",
+					"from": [ 1.875, 0.125, -1.25 ],
+					"to": [ 3.75, 0.75, 1.875 ],
+					"rotationOrigin": [ 0.625, 0.75, -1.875 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 7.5, 6.5, 9.0, 7.0 ] },
+						"east": { "texture": "#slop", "uv": [ 8.0, 5.0, 11.0, 5.5 ] },
+						"south": { "texture": "#slop", "uv": [ 7.5, 5.5, 9.0, 6.0 ] },
+						"up": { "texture": "#slop", "uv": [ 5.5, 4.5, 7.0, 7.5 ] }
+					}
+				},
+				{
+					"name": "Cube21",
+					"from": [ 0.0, 2.0, -2.5 ],
+					"to": [ 0.625, 2.625, -1.25 ],
+					"rotationOrigin": [ -1.25, 2.625, -3.125 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 8.5, 6.0, 9.0, 6.5 ] },
+						"east": { "texture": "#slop", "uv": [ 6.5, 5.5, 7.5, 6.0 ] },
+						"up": { "texture": "#slop", "uv": [ 7.5, 6.0, 8.0, 7.0 ] }
+					}
+				},
+				{
+					"name": "Cube22",
+					"from": [ -1.875, 0.125, -5.625 ],
+					"to": [ -0.625, 0.75, -4.375 ],
+					"rotationOrigin": [ 0.625, -1.75, -3.75 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 4.5, 6.5, 5.5, 7.0 ] },
+						"east": { "texture": "#slop", "uv": [ 8.0, 5.5, 9.0, 6.0 ] },
+						"west": { "texture": "#slop", "uv": [ 5.0, 7.5, 6.0, 8.0 ] },
+						"up": { "texture": "#slop", "uv": [ 8.0, 5.5, 9.0, 6.5 ] }
+					}
+				},
+				{
+					"name": "Cube23",
+					"from": [ -1.875, 0.75, -4.375 ],
+					"to": [ -0.625, 2.0, -3.125 ],
+					"rotationOrigin": [ 0.625, -2.375, -3.75 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 8.0, 9.5, 9.0, 10.5 ] },
+						"east": { "texture": "#slop", "uv": [ 7.0, 5.5, 8.0, 6.5 ] },
+						"west": { "texture": "#slop", "uv": [ 7.5, 7.5, 8.5, 8.5 ] },
+						"up": { "texture": "#slop", "uv": [ 7.0, 6.0, 8.0, 7.0 ] }
+					}
+				},
+				{
+					"name": "Cube24",
+					"from": [ -4.375, 0.125, 0.0 ],
+					"to": [ -3.75, 0.75, 0.625 ],
+					"rotationOrigin": [ -0.625, 0.75, -6.875 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 8.0, 9.5, 8.5, 10.0 ] },
+						"south": { "texture": "#slop", "uv": [ 6.5, 6.0, 7.0, 6.5 ] },
+						"west": { "texture": "#slop", "uv": [ 8.0, 4.5, 8.5, 5.0 ] },
+						"up": { "texture": "#slop", "uv": [ 8.0, 8.0, 8.5, 8.5 ] }
+					}
+				},
+				{
+					"name": "Cube25",
+					"from": [ -4.375, 0.125, -1.25 ],
+					"to": [ -3.75, 0.75, -0.625 ],
+					"rotationOrigin": [ -0.625, 0.75, -8.125 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 8.0, 8.0, 8.5, 8.5 ] },
+						"south": { "texture": "#slop", "uv": [ 6.0, 7.5, 6.5, 8.0 ] },
+						"west": { "texture": "#slop", "uv": [ 7.5, 6.0, 8.0, 6.5 ] },
+						"up": { "texture": "#slop", "uv": [ 9.5, 7.0, 10.0, 7.5 ] }
+					}
+				},
+				{
+					"name": "Cube26",
+					"from": [ 2.5, 0.75, -0.625 ],
+					"to": [ 3.125, 1.375, 0.625 ],
+					"rotationOrigin": [ 1.25, 1.375, -1.25 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 8.0, 8.5, 8.5, 9.0 ] },
+						"east": { "texture": "#slop", "uv": [ 6.0, 6.5, 7.0, 7.0 ] },
+						"south": { "texture": "#slop", "uv": [ 5.5, 6.5, 6.0, 7.0 ] },
+						"up": { "texture": "#slop", "uv": [ 8.5, 7.5, 9.0, 8.5 ] }
+					}
+				},
+				{
+					"name": "Cube27",
+					"from": [ -3.75, 0.75, -1.25 ],
+					"to": [ -3.125, 1.375, -0.625 ],
+					"rotationOrigin": [ 0.0, -2.375, -8.125 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 8.0, 7.5, 8.5, 8.0 ] },
+						"south": { "texture": "#slop", "uv": [ 7.0, 6.0, 7.5, 6.5 ] },
+						"west": { "texture": "#slop", "uv": [ 9.5, 7.5, 10.0, 8.0 ] },
+						"up": { "texture": "#slop", "uv": [ 6.0, 5.5, 6.5, 6.0 ] }
+					}
+				},
+				{
+					"name": "Cube30",
+					"from": [ -1.25, 0.75, -5.0 ],
+					"to": [ -0.625, 1.375, -4.375 ],
+					"rotationOrigin": [ 2.5, -2.375, -11.875 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 8.0, 7.0, 8.5, 7.5 ] },
+						"east": { "texture": "#slop", "uv": [ 6.5, 8.0, 7.0, 8.5 ] },
+						"west": { "texture": "#slop", "uv": [ 9.5, 7.0, 10.0, 7.5 ] },
+						"up": { "texture": "#slop", "uv": [ 8.0, 7.5, 8.5, 8.0 ] }
+					}
+				},
+				{
+					"name": "Cube32",
+					"from": [ 1.875, 1.375, -1.875 ],
+					"to": [ 2.5, 2.0, -1.25 ],
+					"rotationOrigin": [ 3.125, -3.0, -8.75 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 8.5, 8.0, 9.0, 8.5 ] },
+						"east": { "texture": "#slop", "uv": [ 8.5, 6.5, 9.0, 7.0 ] },
+						"south": { "texture": "#slop", "uv": [ 6.0, 7.5, 6.5, 8.0 ] },
+						"up": { "texture": "#slop", "uv": [ 9.5, 8.5, 10.0, 9.0 ] }
+					}
+				},
+				{
+					"name": "Cube33",
+					"from": [ 1.875, 0.125, -4.375 ],
+					"to": [ 2.5, 0.75, -3.75 ],
+					"rotationOrigin": [ 3.125, -4.25, -11.25 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 6.5, 6.0, 7.0, 6.5 ] },
+						"east": { "texture": "#slop", "uv": [ 6.5, 5.0, 7.0, 5.5 ] },
+						"south": { "texture": "#slop", "uv": [ 6.0, 6.0, 6.5, 6.5 ] },
+						"up": { "texture": "#slop", "uv": [ 8.0, 7.0, 8.5, 7.5 ] }
+					}
+				},
+				{
+					"name": "Cube34",
+					"from": [ 0.0, 0.125, -5.0 ],
+					"to": [ 1.875, 1.375, -3.75 ],
+					"rotationOrigin": [ 2.5, -3.0, -4.375 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 9.5, 9.0, 11.0, 10.0 ] },
+						"east": { "texture": "#slop", "uv": [ 7.0, 6.5, 8.0, 7.5 ] },
+						"west": { "texture": "#slop", "uv": [ 6.0, 8.0, 7.0, 9.0 ] },
+						"up": { "texture": "#slop", "uv": [ 7.5, 5.5, 9.0, 6.5 ] }
+					}
+				},
+				{
+					"name": "Cube35",
+					"from": [ 0.625, 0.125, -5.625 ],
+					"to": [ 1.25, 0.75, -5.0 ],
+					"rotationOrigin": [ 1.875, -4.25, -12.5 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 6.5, 7.5, 7.0, 8.0 ] },
+						"east": { "texture": "#slop", "uv": [ 6.0, 6.0, 6.5, 6.5 ] },
+						"west": { "texture": "#slop", "uv": [ 8.5, 7.5, 9.0, 8.0 ] },
+						"up": { "texture": "#slop", "uv": [ 7.0, 8.5, 7.5, 9.0 ] }
+					}
+				},
+				{
+					"name": "Cube36",
+					"from": [ 1.875, 1.375, 0.0 ],
+					"to": [ 2.5, 2.0, 0.625 ],
+					"rotationOrigin": [ 3.125, -3.0, -6.875 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 9.5, 9.0, 10.0, 9.5 ] },
+						"east": { "texture": "#slop", "uv": [ 7.0, 5.5, 7.5, 6.0 ] },
+						"south": { "texture": "#slop", "uv": [ 7.0, 6.0, 7.5, 6.5 ] },
+						"up": { "texture": "#slop", "uv": [ 7.5, 8.5, 8.0, 9.0 ] }
+					}
+				},
+				{
+					"name": "Cube38",
+					"from": [ 0.625, 3.25, 0.0 ],
+					"to": [ 1.25, 3.875, 0.625 ],
+					"rotationOrigin": [ 1.875, -1.125, -6.875 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 7.5, 8.0, 8.0, 8.5 ] },
+						"east": { "texture": "#slop", "uv": [ 8.0, 5.5, 8.5, 6.0 ] },
+						"south": { "texture": "#slop", "uv": [ 5.5, 7.0, 6.0, 7.5 ] },
+						"west": { "texture": "#slop", "uv": [ 9.0, 10.0, 9.5, 10.5 ] },
+						"up": { "texture": "#slop", "uv": [ 7.5, 6.0, 8.0, 6.5 ] }
+					}
+				},
+				{
+					"name": "Cube39",
+					"from": [ 1.25, 2.0, 0.0 ],
+					"to": [ 1.875, 2.625, 0.625 ],
+					"rotationOrigin": [ 2.5, -2.375, -6.875 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 8.5, 8.0, 9.0, 8.5 ] },
+						"east": { "texture": "#slop", "uv": [ 4.5, 7.5, 5.0, 8.0 ] },
+						"south": { "texture": "#slop", "uv": [ 7.5, 6.0, 8.0, 6.5 ] },
+						"up": { "texture": "#slop", "uv": [ 7.5, 5.5, 8.0, 6.0 ] }
+					}
+				},
+				{
+					"name": "Cube41",
+					"from": [ -4.375, 0.125, 2.5 ],
+					"to": [ -3.125, 0.75, 4.375 ],
+					"rotationOrigin": [ -0.625, 0.75, -4.375 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 8.0, 9.5, 9.0, 10.0 ] },
+						"east": { "texture": "#slop", "uv": [ 6.0, 7.5, 7.5, 8.0 ] },
+						"south": { "texture": "#slop", "uv": [ 4.5, 9.0, 5.5, 9.5 ] },
+						"west": { "texture": "#slop", "uv": [ 5.0, 5.5, 6.5, 6.0 ] },
+						"up": { "texture": "#slop", "uv": [ 8.0, 6.0, 9.0, 7.5 ] }
+					}
+				},
+				{
+					"name": "Cube42",
+					"from": [ -3.75, 0.75, 3.125 ],
+					"to": [ -2.5, 1.375, 3.75 ],
+					"rotationOrigin": [ 0.0, 1.375, -3.75 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 7.5, 7.5, 8.5, 8.0 ] },
+						"east": { "texture": "#slop", "uv": [ 7.5, 6.0, 8.0, 6.5 ] },
+						"south": { "texture": "#slop", "uv": [ 5.0, 8.5, 6.0, 9.0 ] },
+						"west": { "texture": "#slop", "uv": [ 9.0, 8.0, 9.5, 8.5 ] },
+						"up": { "texture": "#slop", "uv": [ 8.0, 8.0, 9.0, 8.5 ] }
+					}
+				},
+				{
+					"name": "Cube43",
+					"from": [ -3.125, 0.125, 3.125 ],
+					"to": [ -1.875, 0.75, 3.75 ],
+					"rotationOrigin": [ 0.625, 0.75, -3.75 ],
+					"faces": {
+						"east": { "texture": "#slop", "uv": [ 5.5, 7.5, 6.0, 8.0 ] },
+						"south": { "texture": "#slop", "uv": [ 7.0, 6.5, 8.0, 7.0 ] },
+						"up": { "texture": "#slop", "uv": [ 6.5, 7.0, 7.5, 7.5 ] }
+					}
+				},
+				{
+					"name": "Cube44",
+					"from": [ -5.0, 0.125, -4.375 ],
+					"to": [ -4.375, 0.75, -3.125 ],
+					"rotationOrigin": [ -1.25, 0.75, -11.25 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 8.0, 10.0, 8.5, 10.5 ] },
+						"east": { "texture": "#slop", "uv": [ 6.0, 8.0, 7.0, 8.5 ] },
+						"south": { "texture": "#slop", "uv": [ 6.5, 7.0, 7.0, 7.5 ] },
+						"west": { "texture": "#slop", "uv": [ 8.0, 6.5, 9.0, 7.0 ] },
+						"up": { "texture": "#slop", "uv": [ 7.0, 10.0, 7.5, 11.0 ] }
+					}
+				},
+				{
+					"name": "Cube45",
+					"from": [ -3.75, 0.125, -5.625 ],
+					"to": [ -3.125, 0.75, -5.0 ],
+					"rotationOrigin": [ 0.0, -3.0, -12.5 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 9.0, 7.0, 9.5, 7.5 ] },
+						"east": { "texture": "#slop", "uv": [ 8.0, 5.5, 8.5, 6.0 ] },
+						"south": { "texture": "#slop", "uv": [ 8.5, 9.0, 9.0, 9.5 ] },
+						"west": { "texture": "#slop", "uv": [ 7.5, 6.0, 8.0, 6.5 ] },
+						"up": { "texture": "#slop", "uv": [ 9.5, 8.0, 10.0, 8.5 ] }
+					}
+				},
+				{
+					"name": "Cube47",
+					"from": [ -1.25, 0.125, 3.125 ],
+					"to": [ -0.625, 0.75, 3.75 ],
+					"rotationOrigin": [ 0.0, -4.25, -3.75 ],
+					"faces": {
+						"east": { "texture": "#slop", "uv": [ 6.5, 9.0, 7.0, 9.5 ] },
+						"south": { "texture": "#slop", "uv": [ 5.5, 8.0, 6.0, 8.5 ] },
+						"west": { "texture": "#slop", "uv": [ 7.5, 6.5, 8.0, 7.0 ] },
+						"up": { "texture": "#slop", "uv": [ 8.5, 8.0, 9.0, 8.5 ] },
+						"down": { "texture": "#slop", "uv": [ 6.0, 5.5, 6.5, 6.0 ] }
+					}
+				},
+				{
+					"name": "Cube48",
+					"from": [ 3.125, 0.125, 1.875 ],
+					"to": [ 3.75, 0.75, 2.5 ],
+					"rotationOrigin": [ 4.375, -4.25, -5.0 ],
+					"faces": {
+						"north": { "texture": "#slop", "uv": [ 7.5, 6.0, 8.0, 6.5 ] },
+						"east": { "texture": "#slop", "uv": [ 6.5, 5.5, 7.0, 6.0 ] },
+						"south": { "texture": "#slop", "uv": [ 7.5, 8.0, 8.0, 8.5 ] },
+						"west": { "texture": "#slop", "uv": [ 7.5, 9.0, 8.0, 9.5 ] },
+						"up": { "texture": "#slop", "uv": [ 10.0, 8.5, 10.5, 9.0 ] }
+					}
+				}
+			]
+		},
+		{
+			"name": "base",
+			"from": [ 2.0, 0.1, 2.0 ],
+			"to": [ 14.0, 0.1, 14.0 ],
+			"renderPass": 3,
+			"rotationOrigin": [ 4.0, 0.1, 7.0 ],
+			"faces": {
+				"up": { "texture": "#slop", "uv": [ 0.5, 0.5, 15.5, 15.5 ], "autoUv": false }
+			}
+		}
+	]}
