@@ -13,8 +13,17 @@
 	"sealHours": 336,
 	"ingredients": [
 		{ "type": "item", "code": "game:salt",  "quantity": 8 },
-		{ "type": "item", "code": "expandedfoods:fishnugget-*", "allowedVariants": ["raw", "smashed"], "quantity": 64 }
+		{ "type": "item", "code": "expandedfoods:fishnugget-raw", "quantity": 64 }
 	],
 	"output": { "type": "item", "code": "expandedfoods:fermentedfish-slop", "quantity": 1 }
+  },
+  {
+    "code": "fermentedfish",
+    "sealHours": 336,
+    "ingredients": [
+      { "type": "item", "code": "game:salt",  "quantity": 8 },
+      { "type": "item", "code": "expandedfoods:fishnugget-smashed", "quantity": 64 }
+    ],
+    "output": { "type": "item", "code": "expandedfoods:fermentedfish-slop", "quantity": 1 }
   }
 ]
