@@ -123,6 +123,7 @@ MISC:
 - Healing over time implemented for all items
 - Soulstorm Brew makes you psychedelic now?
 - Items can go into crocks? New labels for everything?
+- Fermented fish slop pile voxelized to resemble pickled soybean pile - DONE!!!
 
 
 2.0.0-dev.5
